--- a/app/index.html
+++ b/app/index.html
@@ -63,7 +63,12 @@
       <h2 id="get-started">Get Started.</h2>
       <p>Read how to <a href="https://developers.google.com/web/starter-kit">Get Started</a> or check out the <a href="styleguide.html">Style Guide</a>.</p>
     </main>
-
+<nav class="bottom-bar">
+      <button class="bottom-btn"></button>
+      <button class="bottom-btn"></button>
+      <button class="bottom-btn"></button>
+      <button class="bottom-btn"></button>
+    </nav>
     <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
