--- a/app/index.html
+++ b/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="TicTacToe9">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
     <title>vira9</title>
 
     <!-- Add to homescreen -->
@@ -12,13 +12,13 @@
 
     <!-- Fallback to homescreen for Chrome <39 on Android -->
     <meta name="mobile-web-app-capable" content="yes">
-    <meta name="application-name" content="Web Starter Kit">
+    <meta name="application-name" content="Vira9">
     <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
     <!-- Add to homescreen for Safari on iOS -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <meta name="apple-mobile-web-app-title" content="Web Starter Kit">
+    <meta name="apple-mobile-web-app-title" content="Vira9">
     <link rel="apple-touch-icon" href="images/touch/apple-touch-icon.png">
 
     <!-- Tile icon for Win8 (144x144 + tile color) -->
@@ -42,7 +42,7 @@
         <h1 class="logo">Web <strong>Starter Kit</strong></h1>
         <section class="app-bar-actions">
         <!-- Put App Bar Buttons Here -->
-        <!-- e.g <button><i class="icon icon-star"></i></button> -->
+         <button><i class="icon icon-star"></i></button> 
         </section>
       </div>
     </header>
@@ -58,13 +58,13 @@
 
     <main>
       <h1 id="hello">Hello!</h1>
-      <p>Welcome to Web Starter Kit.</p>
+      <p>Welcome to Vira9.</p>
 
       <h2 id="get-started">Get Started.</h2>
       <p>Read how to <a href="https://developers.google.com/web/starter-kit">Get Started</a> or check out the <a href="styleguide.html">Style Guide</a>.</p>
     </main>
-<nav class="bottom-bar">
-      <button class="bottom-btn"></button>
+    <nav class="bottom-bar">
+      <button class="bottom-btn">H</button>
       <button class="bottom-btn"></button>
       <button class="bottom-btn"></button>
       <button class="bottom-btn"></button>
@@ -74,14 +74,14 @@
     <!-- endbuild -->
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
+    <!--<script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
       ga('create', 'UA-XXXXX-X', 'auto');
       ga('send', 'pageview');
-    </script>
-    <!-- Built with love using Web Starter Kit -->
+    </script>-->
+    <!-- Built with love using Web Kit Starter -->
   </body>
 </html>
