--- a/app/index.html
+++ b/app/index.html
@@ -42,10 +42,10 @@
     <header class="app-bar promote-layer">
       <div class="app-bar-container">
         <button class="menu"><img src="images/hamburger.svg" alt="Menu"></button>
-        <h1 class="logo">Web <strong>Starter Kit</strong></h1>
+        <h1 class="logo"><strong>Vira9</strong></h1>
         <section class="app-bar-actions">
         <!-- Put App Bar Buttons Here -->
-         <button><i class="icon icon-star"></i></button> 
+         <button><i class="icon icon-star"></i></button>
         </section>
       </div>
     </header>
@@ -123,17 +123,17 @@
     </div>
 
     </main>
-    
+
     <nav class="bottom-bar">
       <button class="bottom-btn"></button>
       <button class="bottom-btn"></button>
       <button class="bottom-btn"></button>
       <button class="bottom-btn"></button>
     </nav>
-    <!-- build:js scripts/main.min.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-alpha1/jquery.min.js"></script>-->
+    <!-- build:js scripts/main.min.js -->
     <script src="scripts/main.js"></script>
     <!-- endbuild -->
 
