--- a/app/index.html
+++ b/app/index.html
@@ -36,7 +36,6 @@
     <!-- Page styles -->
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/css/materialize.min.css">
-
   </head>
   <body>
     <header class="app-bar promote-layer">
@@ -53,75 +52,72 @@
     <nav class="navdrawer-container promote-layer">
       <h4>Navigation</h4>
       <ul>
-        <li><a href="#hello">Game</a></li>
-        <li><a href="#get-started">Online</a></li>
-        <li><a href="#">Score23</a></li>
+        <li><a href="#">Game</a></li>
+        <li><a href="#">Online</a></li>
+        <li><a href="#">Score</a></li>
       </ul>
     </nav>
 
     <main>
-    <div class="section no-pad-bot flexbox-container " id="index-banner">
-    <div class="board">
-      <div class="card row">
-        <div class="center card-image waves-effect waves-block waves-light col s9 ">
-
-          <div class="row">
-            <div class="col s4 tile" id="cell1">
-              <div data-id="1" class="card-panel orange white-text"> .
+      <div class="section no-pad-bot flexbox-container " id="index-banner">
+      <div class="board">
+        <div class="card row">
+          <div class="center card-image waves-effect waves-block waves-light col s9 ">
+            <div class="row">
+              <div class="col s4 tile" id="cell1">
+                <div data-id="1" class="card-panel orange white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell2">
-              <div data-id="2" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell2">
+                <div data-id="2" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell3">
-              <div data-id="3" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell3">
+                <div data-id="3" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell4">
-              <div data-id="4" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell4">
+                <div data-id="4" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell5">
-              <div data-id="5" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell5">
+                <div data-id="5" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell6">
-              <div data-id="6" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell6">
+                <div data-id="6" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell7">
-              <div data-id="7" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell7">
+                <div data-id="7" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell8">
-              <div data-id="8" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell8">
+                <div data-id="8" class="card-panel teal white-text"> .
+                </div>
               </div>
-            </div>
-            <div class="col s4 tile" id="cell9">
-              <div data-id="9" class="card-panel teal white-text"> .
+              <div class="col s4 tile" id="cell9">
+                <div data-id="9" class="card-panel teal white-text"> .
+                </div>
               </div>
             </div>
           </div>
-
-        </div>
-        <div class="card-content">
-          <span class="card-title activator grey-text text-darken-4">Instructions <i class="mdi-navigation-more-vert right"></i>
-            <p>
-              <input type="RESET" class="app-reset">
-              <a class="app-timer-mate" href="#">|٩(͡๏̯͡๏)۶|</a>
-              <span class="app-timer">
-              </span></p>
+          <div class="card-content">
+            <span class="card-title activator grey-text text-darken-4">Instructions <i class="mdi-navigation-more-vert right"></i>
+              <p>
+                <input type="RESET" class="app-reset">
+                <a class="app-timer-mate" href="#">|٩(͡๏̯͡๏)۶|</a>
+                <span class="app-timer"> </span>
+              </p>
             </span>
           </div>
           <div class="card-reveal">
             <span class="card-title grey-text text-darken-4">How to play <i class="mdi-navigation-close right"></i></span>
-            <p>Here is some more information about this product that is only revealed once clicked on.</p>
+            <p>-__-.</p>
+          </div>
           </div>
         </div>
       </div>
-    </div>
-
     </main>
 
     <nav class="bottom-bar">
